# cgm-insights-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  deploy.ps1  deploy.sh  fly.toml
.github/workflows/: ci.yml  deploy.yml
src/: config.rs  error.rs  lib.rs  main.rs  openapi.rs  scheduler.rs  server.rs
src/db/: mod.rs
src/docs/: openapi.json
src/dto/: request.rs  response.rs
src/handlers/: api_info.rs  auth.rs  cgm.rs  glucose.rs  health.rs  mod.rs  sync.rs
src/middleware/: auth.rs  cors.rs  mod.rs  security_headers.rs
src/models/: cgm_credential.rs  glucose_reading.rs  mod.rs  user.rs
src/repositories/: cgm_repository.rs  glucose_repository.rs  mod.rs  user_repository.rs
src/services/: auth_service.rs  cgm_service.rs  glucose_service.rs  libre_link_client.rs  mod.rs  sync_service.rs
