[package]
name = "cgm-insights-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
axum = "0.8.4"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = "0.15"
anyhow = "1.0"
env_logger = "0.11"
libre_link_up_api_client = "0.2"
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "rustls-tls"], default-features = false }
