[package]
name = "cgm-insights-api"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
axum = "0.8.4"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "set-header", "compression-full"] }
tower = { version = "0.5", features = ["limit"] }
tower_governor = "0.6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "fmt"] }
dotenvy = "0.15"
anyhow = "1.0"
argon2 = "0.5"
jsonwebtoken = "9.3"
rand_core = { version = "0.6", features = ["getrandom"] }
libre_link_up_api_client = "0.3.2"
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "rustls-tls"], default-features = false }
sentry = { version = "0.46.2", features = ["backtrace", "tracing", "tower-http", "tower-axum-matched-path", "anyhow"] }
sentry-tower = { version = "0.46.2", features = ["http"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }